# sentinel-spec

./: INSTRUCTION.md  Makefile  README.md  VQ_PROTOCOL.md
.github/workflows/: spec-compliance.yml
constraints/: architecture.yaml
logic/: inference_engine.yaml  risk_engine.yaml
proto/: intelligence.proto
proto/sentinel/api/v1/: bundle.proto
proto/sentinel/execution/v1/: execution.proto
proto/sentinel/intelligence/v1/: intelligence.proto
proto/sentinel/market/v1/: market_data.proto
proto/sentinel/wallet/v1/: wallet.proto
protocols/: 00-master-manifesto.md  01-system-architecture.md  02-quant-math-and-ai.md  03-infrastructure.md  04-multi-agent-workflow.md
scripts/vq-spec-tools/: Cargo.toml
scripts/vq-spec-tools/src/: main.rs
spec/constraints/: linter-rules.yaml
spec/events/: nats_mesh.yaml  nats_subjects.yml
spec/frontends/: terminal.yaml
spec/infrastructure/: nats.yaml  qdrant.yaml  questdb.yaml
spec/logic/: deduplication_engine.yaml  inference_engine.yaml  risk_engine.yaml  semantic_engine.yaml
spec/services/: api.yaml  chain_ingest.yaml  execution.yaml  inference.yaml  ingest.yaml  intelligence.yaml  news_ingest.yaml  storage.yaml  wallet.yaml
topology/: nats_mesh.yaml  nats_subjects.yml
