[package]
name = "vq-spec-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
glob = "0.3"
regex = "1.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }